--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -69,9 +69,22 @@ h3{
 	text-align:center;
 }
 form{
-  background:#f0f0f0;
-  padding:6% 4%;
+ 	background:#f0f0f0;
+	padding:6% 4%;
 }
+
+
+#form{
+	width: 100%;
+	background:#f0f0f0;
+	padding:3% 4%;
+}
+
+#box{
+	line-height:30px;
+	font-size:15px;
+}
+
 input[type="password"]{
   width:76%;
   height:20px;
@@ -109,7 +122,7 @@ input[type="password"]{
   border:1px solid #ccc;
 }
 input[type="text"]{
-  width:76%;
+  width:210px;
   height:20px;
   margin-bottom:4%;
   border:1px solid #ccc;
